--- a/source/css/blocks/footer.css
+++ b/source/css/blocks/footer.css
@@ -24,6 +24,7 @@
   background-position: center;
   background-size: 100%;
   outline-offset: 4px;
+  filter: var(--image-filter);
 }
 
 .footer__social-link--instagram {
