--- a/source/css/blocks/review.css
+++ b/source/css/blocks/review.css
@@ -65,6 +65,7 @@
   background-size: 100%;
   outline-offset: 4px;
   cursor: pointer;
+  filter: var(--image-filter);
 }
 
 .review__user-link--instagram {
