--- a/source/css/scaffolding.css
+++ b/source/css/scaffolding.css
@@ -7,6 +7,7 @@
 img {
   max-width: 100%;
   height: auto;
+  filter: var(--image-filter);
 }
 
 .visually-hidden {
